[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taming-transformers"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.1",
    "torchvision",
    "numpy",
    "albumentations",
    "opencv-python",
    "pudb",
    "imageio",
    "imageio-ffmpeg",
    "pytorch-lightning",
    "omegaconf",
    "test-tube",
    "streamlit",
    "einops",
    "more-itertools",
    "transformers",
]

[tool.setuptools]
package-dir = { "" = "src"}
